--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "playcast-client",
+  "name": "@viacast/playcast-client",
   "version": "0.1.0",
   "description": "Playcast Middleware API",
-  "main": "index.js",
-  "repository": "https://github.com/gabrieljablonski/playcast-client",
-  "author": "gabrieljablonski <gabriel.g.jablonski@gmail.com>",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
+  "author": "Gabriel Jablonski",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gabrieljablonski/playcast-client.git"
+  },
   "license": "MIT",
-  "private": true,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
@@ -17,10 +27,9 @@
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.3.2",
     "typescript": "^4.4.2"
