--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,13 @@
     "module": "commonjs",
     "target": "es2015",
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": "src",
+    "moduleResolution": "node",
+    "paths": {
+      "@types": ["types.ts"],
+      "@utils": ["utils.ts"]
+    }
   },
   "include": [
     "src/**/*"
