--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viacast/playcast-client",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Playcast Middleware API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,7 +18,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "rm -r dist/ ; tsc -p tsconfig.json"
   },
   "dependencies": {
     "socket.io-client": "^4.2.0"
